--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
+    "start": "node server/app.js",
+    "start:dev": "ng server",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -22,6 +23,7 @@
     "@angular/router": "3.2.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "pug": "^2.0.0-beta6",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
