--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jquery": "^3.1.1",
+    "js-cookie": "^2.1.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "rxjs": "5.0.0-beta.12",
