--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
+    "angular2-cookie": "^1.2.6",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
+    "cookies-js": "^1.2.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
