--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "noImplicitAny": true,
-        "suppressImplicitAnyInexErrors": true
+        "suppressImplicitAnyInexErrors": true,
+        "allowSyntheticDefaultImports": true
     },
     "compileOnSave": false,
     "exclude": [
