--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "express-session": "^1.14.2",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
+    "jsonwebtoken": "^7.2.1",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
