--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.7.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
