--- a/package.json
+++ b/package.json
@@ -13,50 +13,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/forms": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/router": "^3.4.1",
-    "angular2-cookie": "^1.2.6",
-    "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
-    "cookie-parser": "^1.4.3",
-    "cookies-js": "^1.2.3",
-    "core-js": "^2.4.1",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/router": "3.4.1",
+    "angular2-cookie": "1.2.6",
+    "body-parser": "1.15.2",
+    "bootstrap": "3.3.7",
+    "cookie-parser": "1.4.3",
+    "cookies-js": "1.2.3",
+    "core-js": "2.4.1",
+    "express": "4.14.0",
+    "express-session": "1.14.2",
     "jquery": "^3.1.1",
-    "js-cookie": "^2.1.3",
-    "jsonwebtoken": "^7.2.1",
-    "mongoose": "^4.7.4",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1",
-    "passport-local": "^1.0.0",
-    "rxjs": "^5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "js-cookie": "2.1.3",
+    "jsonwebtoken": "7.2.1",
+    "mongoose": "4.7.4",
+    "passport": "0.3.2",
+    "passport-jwt": "2.2.1",
+    "passport-local": "1.0.0",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "1.1.1",
+    "zone.js": "0.6.23"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.3",
     "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
+    "@types/node": "6.0.42",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "node-sass": "^4.1.1",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.0.2",
+    "karma-remap-istanbul": "0.2.1",
+    "node-sass": "4.1.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
+    "tslint": "4.0.2",
     "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
   }
