--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.4",
+    "ng2-toastr": "^1.3.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
