--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.4.3",
     "cookies-js": "^1.2.3",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jquery": "^3.1.1",
