--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.4",
+    "ng2-file-upload": "1.1.4-2",
     "ng2-toastr": "^1.3.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
