--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^4.7.4",
     "ng2-file-upload": "1.1.4-2",
     "ng2-toastr": "^1.3.2",
+    "ngx-uploader": "^2.0.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
