--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
+    "express-fileupload": "0.0.5",
     "express-session": "^1.14.2",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
