--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.4",
     "ng2-file-upload": "1.1.4-2",
+    "ng2-pagination": "1.0.1",
     "ng2-toastr": "^1.3.2",
     "ngx-uploader": "^2.0.1",
     "passport": "^0.3.2",
