--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng2-pagination": "1.0.1",
     "ng2-toastr": "^1.3.2",
     "ngx-uploader": "^2.0.1",
+    "nodemailer": "^2.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
